# solana-monitor

./: Cargo.toml  Dockerfile  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: build.yml
src/: id_url.rs  main.rs  metrics.rs  prom_u64.rs  solana_rpc.rs
src/task/: metrics_server.rs  mod.rs  slot_poller.rs
