[package]
name = "solana-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
futures-util = { version = "0.3.30", default-features = false }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
jsonrpsee = { version = "0.23.1", features = [
    "tokio",
    "macros",
    "http-client",
] }
lazy_static = "1.4.0"
parse_duration = "2.1.1"
prometheus = "0.13.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "net",
    "signal",
] }
tokio-util = { version = "0.7.11", features = ["futures-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
