[package]
name = "solana-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
duration-string = "0.4.0"
futures-util = { version = "0.3.30", default-features = false }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
lazy_static = "1.4.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.5", default-features = false, features = [
    "default-tls",
    "json",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "net",
    "signal",
] }
tokio-util = { version = "0.7.11", features = ["futures-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
